--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "ielts-writing-app",
+  "name": "ielts-writing-secure-test",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vercel dev",
     "start": "vercel dev"
-  }
+  },
+  "dependencies": {}
 }
